[package]
name = "rs-dtsocket"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"

[dependencies]
rs-protov2d = { git = "https://github.com/BadAimWeeb/rs-protov2d" }
futures-util = "0.3.31"
rmp-serde = "1.3.0"
serde = { version = "1.0.215", features = ["serde_derive"] }
tokio = { version = "1.41.1", features = ["sync"] }
rmpv = "1.3.0"
rustls = "0.23.19"
async-mutex = "1.4.0"
